Writing about materiality and movement and soft robots

--- a/aalto.bib
+++ b/aalto.bib
@@ -1,10 +1,4 @@
 
-@misc{13HannaSiskoYouTube,
-  title = {(13) {{Hanna}}-{{Sisko O}} - {{YouTube}}},
-  file = {/home/avnerus/Zotero/storage/UMYMXQN7/UCfOMNbil_YHA9zHx1sb5cHA.html},
-  howpublished = {https://www.youtube.com/channel/UCfOMNbil\_YHA9zHx1sb5cHA}
-}
-
 @book{adornoDialecticEnlightenment1997,
   title = {Dialectic of Enlightenment},
   author = {Adorno, Theodor W. and Horkheimer, Max},
@@ -173,6 +167,7 @@
   year = {2018},
   volume = {5},
   pages = {229--241},
+  file = {/home/avnerus/Zotero/storage/YIZKYHCG/Bao et al. - 2018 - Soft robotics Academic insights and perspectives .pdf},
   journal = {Soft robotics},
   number = {3}
 }
@@ -236,6 +231,22 @@
   pages = {176--209},
   publisher = {{Cambridge University Press Cambridge}},
   journal = {Face-to-face communication over the Internet: Issues, research, challenges}
+}
+
+@inproceedings{bewleyDesigningBlonutDesign2018,
+  title = {{\emph{Designing }}{{{\emph{Blo}}}}{\emph{-Nut}}: {{Design Principles}}, {{Choreography}} and {{Otherness}} in an {{Expressive Social Robot}}},
+  shorttitle = {{\emph{Designing }}{{{\emph{Blo}}}}{\emph{-Nut}}},
+  booktitle = {Proceedings of the 2018 on {{Designing Interactive Systems Conference}} 2018  - {{DIS}} '18},
+  author = {Bewley, Harvey and Boer, Laurens},
+  year = {2018},
+  pages = {1069--1080},
+  publisher = {{ACM Press}},
+  address = {{Hong Kong, China}},
+  doi = {10.1145/3196709.3196817},
+  abstract = {Both a provocative artistic object and research artefact, Blo-nut is part of a project where we explore novel robotic behaviour away from the mimicry of complex human expressions more commonly associated with robotic form and movement. In this pictorial we start by outlining our underlining design principles for the design process and use images to describe the making, real-time GUI and the `choreographic sketching' of Blonut's movement characteristics. Finally, we argue for embracing novel and provoking `otherness' in form and material when exploring interaction and communication with social robots.},
+  file = {/home/avnerus/Zotero/storage/W2V4KR2B/Bewley and Boer - 2018 - iDesigning Blo-nuti Design Principles, Chore.pdf},
+  isbn = {978-1-4503-5198-0},
+  language = {en}
 }
 
 @article{birnbaumWhenSexMore2006,
@@ -330,6 +341,23 @@
   number = {1}
 }
 
+@article{broekensAssistiveSocialRobots2009,
+  title = {Assistive Social Robots in Elderly Care: A Review},
+  shorttitle = {Assistive Social Robots in Elderly Care},
+  author = {Broekens, J. and Heerink, M. and Rosendal, H.},
+  year = {2009},
+  month = apr,
+  volume = {8},
+  pages = {94--103},
+  issn = {1569-111X, 1569-1101},
+  doi = {10.4017/gt.2009.08.02.002.00},
+  abstract = {Context: Assistive social robots, a particular type of assistive robotics designed for social interaction with humans could play an important role with respect to health and psychological wellbeing of elderly.},
+  file = {/home/avnerus/Zotero/storage/NX6NJHYZ/Broekens et al. - 2009 - Assistive social robots in elderly care a review.pdf},
+  journal = {Gerontechnology},
+  language = {en},
+  number = {2}
+}
+
 @article{brownIntegrativeTheoryIntergroup2005,
   title = {An Integrative Theory of Intergroup Contact},
   author = {Brown, Rupert and Hewstone, Miles},
@@ -339,6 +367,14 @@
   file = {/home/avnerus/Zotero/storage/WJJTYMPG/Brown and Hewstone - 2005 - An integrative theory of intergroup contact.pdf},
   journal = {Advances in experimental social psychology},
   number = {37}
+}
+
+@article{brownInterpersonalIntergroupBehaviour1981,
+  title = {Interpersonal and Intergroup Behaviour},
+  author = {Brown, Rupert J. and Turner, John C.},
+  year = {1981},
+  pages = {33--65},
+  journal = {Intergroup behavior}
 }
 
 @article{burgoonNonverbalSignals1994,
@@ -848,6 +884,15 @@ Conclusions: These findings are the first to demonstrate long-term effects of ea
   number = {1}
 }
 
+@inproceedings{finkAnthropomorphismHumanLikeness2012,
+  title = {Anthropomorphism and Human Likeness in the Design of Robots and Human-Robot Interaction},
+  booktitle = {International {{Conference}} on {{Social Robotics}}},
+  author = {Fink, Julia},
+  year = {2012},
+  pages = {199--208},
+  publisher = {{Springer}}
+}
+
 @book{forsterMachineStops2015,
   title = {The Machine Stops},
   author = {Forster, Edward Morgan},
@@ -915,17 +960,7 @@ Conclusions: These findings are the first to demonstrate long-term effects of ea
   volume = {1},
   pages = {1--21},
   issn = {1080-6547},
-  journal = {Imago}
-}
-
-@article{freudUncanny1919a,
-  title = {The {{Uncanny}}},
-  author = {Freud, Sigmund},
-  year = {1919},
-  volume = {1},
-  pages = {1--21},
-  issn = {1080-6547},
-  file = {/home/avnerus/Zotero/storage/XYPA7IQQ/Freud - 1919 - The Uncanny(2).pdf},
+  file = {/home/avnerus/Zotero/storage/5P8UJ5S9/Freud - 1919 - The Uncanny.pdf},
   journal = {Imago}
 }
 
@@ -991,6 +1026,21 @@ Conclusions: These findings are the first to demonstrate long-term effects of ea
   keywords = {actuators,Actuators,bending axis,composite materials,conformal covering,constrain motion,control system synthesis,design guideline,displacement capability,end effectors,Fabrication,fabrication guideline,fiber-reinforced soft actuators,fiber-reinforced soft bending actuator,Force,force capability,gripping force,Laminates,mechanically programmable bend radius,moulding,multistep molding,rectangular object matching,Rubber,Strain,two-digit end-effector design}
 }
 
+@book{geSocialRobotics4th2012,
+  title = {Social {{Robotics}}: 4th {{International Conference}}, {{ICSR}} 2012, {{Chengdu}}, {{China}}, {{October}} 29-31, 2012. {{Proceedings}}},
+  shorttitle = {Social {{Robotics}}},
+  editor = {Ge, Shuzhi Sam and Khatib, Oussama and Cabibihan, John-John and Simmons, Reid and Williams, Mary-Anne and Hutchison, David and Kanade, Takeo and Kittler, Josef and Kleinberg, Jon M. and Mattern, Friedemann and Mitchell, John C. and Naor, Moni and Nierstrasz, Oscar and Pandu Rangan, C. and Steffen, Bernhard and Sudan, Madhu and Terzopoulos, Demetri and Tygar, Doug and Vardi, Moshe Y. and Weikum, Gerhard},
+  year = {2012},
+  volume = {7621},
+  publisher = {{Springer Berlin Heidelberg}},
+  address = {{Berlin, Heidelberg}},
+  doi = {10.1007/978-3-642-34103-8},
+  file = {/home/avnerus/Zotero/storage/DPRXW69Q/Ge et al. - 2012 - Social Robotics 4th International Conference, ICS.pdf},
+  isbn = {978-3-642-34102-1 978-3-642-34103-8},
+  language = {en},
+  series = {Lecture {{Notes}} in {{Computer Science}}}
+}
+
 @article{gollmitzerClosenessControlInterpersonal,
   title = {Closeness or {{Control}} in {{Interpersonal Communication Online}}? {{Long}}-{{Distance Relationships Mediated Through Skype}}},
   author = {Gollmitzer, Mirjam}
@@ -1002,6 +1052,22 @@ Conclusions: These findings are the first to demonstrate long-term effects of ea
   year = {2017},
   pages = {73--102},
   journal = {Intercorporeality: Emerging socialities in interaction}
+}
+
+@inproceedings{groomAmMyRobot2009,
+  title = {I Am My Robot: The Impact of Robot-Building and Robot Form on Operators},
+  shorttitle = {I Am My Robot},
+  booktitle = {Proceedings of the 4th {{ACM}}/{{IEEE}} International Conference on {{Human}} Robot Interaction - {{HRI}} '09},
+  author = {Groom, Victoria and Takayama, Leila and Ochi, Paloma and Nass, Clifford},
+  year = {2009},
+  pages = {31},
+  publisher = {{ACM Press}},
+  address = {{La Jolla, California, USA}},
+  doi = {10.1145/1514095.1514104},
+  abstract = {As robots become more pervasive, operators will develop richer relationships with them. In a 2 (robot form: humanoid vs. car) x 2 (assembler: self vs. other) between-participants experiment (N=56), participants assembled either a humanoid or car robot. Participants then used, in the context of a game, either the robot they built or a different robot. Participants showed greater extension of their self-concept into the car robot and preferred the personality of the car robot over the humanoid robot. People showed greater self extension into a robot and preferred the personality of the robot they assembled over a robot they believed to be assembled by another. Implications for the theory and design of robots and human-robot interaction are discussed.},
+  file = {/home/avnerus/Zotero/storage/T84GY7KY/Groom et al. - 2009 - I am my robot the impact of robot-building and ro.pdf},
+  isbn = {978-1-60558-404-1},
+  language = {en}
 }
 
 @article{grossmanMindfulnessbasedStressReduction2004,
@@ -1128,6 +1194,23 @@ Conclusion: Factors related to the robot itself, specifically, its performance, 
   pages = {673},
   journal = {American psychologist},
   number = {12}
+}
+
+@article{harwoodContactSpaceNovel2010,
+  title = {The {{Contact Space}}: {{A Novel Framework}} for {{Intergroup Contact Research}}},
+  shorttitle = {The {{Contact Space}}},
+  author = {Harwood, Jake},
+  year = {2010},
+  month = jun,
+  volume = {29},
+  pages = {147--177},
+  issn = {0261-927X, 1552-6526},
+  doi = {10.1177/0261927X09359520},
+  abstract = {This article presents a new framework for understanding research on the intersection between language, communication, and intergroup contact. Contact theory has described a variety of ways in which contact between groups can reduce prejudice and improve intergroup relations. However, the field has become fragmented by the study of a variety of forms of contact whose interconnections have not been elucidated, and it has paid insufficient attention to the language and communicative dynamics of the contact event itself. This article accounts for the variation in forms of contact studied by arraying them in two-dimensional space organized by (a) involvement of self in contact and (b) richness of self-outgroup experience. The former pertains to whether an individual is directly involved in interaction with an outgroup member (vs. merely observing such contact); the latter pertains to the multiplicity of channels and senses through which one experiences the outgroup member.These two dimensions are argued to be largely orthogonal. The two-dimensional space is used to organize mediators and moderators in the field, to specify in detail the intersection between contact and issues of language and communication, as well as to outline areas of particular promise for specific contact interventions.},
+  file = {/home/avnerus/Zotero/storage/UNYFYZH2/Harwood - 2010 - The Contact Space A Novel Framework for Intergrou.pdf},
+  journal = {Journal of Language and Social Psychology},
+  language = {en},
+  number = {2}
 }
 
 @incollection{haslerOnlineIntergroupContact2013,
@@ -1519,6 +1602,7 @@ Conclusion: Factors related to the robot itself, specifically, its performance, 
   volume = {2},
   pages = {7--16},
   issn = {0969-725X},
+  file = {/home/avnerus/Zotero/storage/BL3F24M4/Jentsch - 1997 - On the psychology of the uncanny (1906).pdf},
   journal = {Angelaki: Journal of the Theoretical Humanities},
   number = {1}
 }
@@ -1541,11 +1625,27 @@ Conclusion: Factors related to the robot itself, specifically, its performance, 
   number = {2}
 }
 
+@inproceedings{jorgensenAppealPerceivedNaturalness2018,
+  title = {Appeal and {{Perceived Naturalness}} of a {{Soft Robotic Tentacle}}},
+  booktitle = {Companion of the 2018 {{ACM}}/{{IEEE International Conference}} on {{Human}}-{{Robot Interaction}}},
+  author = {J{\o}rgensen, Jonas},
+  year = {2018},
+  month = mar,
+  pages = {139--140},
+  publisher = {{ACM}},
+  address = {{Chicago IL USA}},
+  doi = {10.1145/3173386.3176985},
+  file = {/home/avnerus/Zotero/storage/59M9Y75I/Jørgensen - 2018 - Appeal and Perceived Naturalness of a Soft Robotic.pdf},
+  isbn = {978-1-4503-5615-2},
+  language = {en}
+}
+
 @phdthesis{jorgensenConstructingSoftRobot2019,
   title = {Constructing {{Soft Robot Aesthetics}}. {{Art}}, {{Sensation}}, and {{Materiality}} in {{Practice}}.},
   author = {J{\o}rgensen, Jonas},
   year = {2019},
-  month = jun
+  month = jun,
+  file = {/home/avnerus/Zotero/storage/GJSL3RYF/Jørgensen - 2019 - Constructing Soft Robot Aesthetics. Art, Sensation.pdf}
 }
 
 @article{jorgensenProlegomenaTransdisciplinaryInvestigation2017,
@@ -1634,6 +1734,7 @@ Conclusion: Factors related to the robot itself, specifically, its performance, 
   year = {2003},
   publisher = {{Transaction Publishers}},
   address = {{New Brunswick, N.J}},
+  file = {/home/avnerus/Zotero/storage/T3GK2LP2/Katz - 2003 - Machines that become us the social context of per.pdf},
   isbn = {978-0-7658-0158-6},
   keywords = {Congresses,Information society,Information technology,Social aspects,Telecommunication},
   language = {en},
@@ -1715,9 +1816,33 @@ iTunes - https://itunes.apple.com/us/album/bre...
 Spotify - https://play.spotify.com/album/1DCQYj...}
 }
 
+@article{kerruishAffectiveTouchSocial,
+  title = {Affective {{Touch}} in {{Social Robots}}},
+  author = {Kerruish, Erika},
+  pages = {20},
+  abstract = {Social robotics asks people to be physically and psychologically intimate with robots. Of all the senses, touch is most associated with intimacy and the material qualities of contact readily morph into psychological ones. To see how these intricacies of touch are present but not always fully articulated in research into tactility in social robots, this paper firstly considers two sets of research in tactile robotics, one examining touch in an anthropomorphic robot and the other in an innovative, partially zoomorphic robot. While such research can be criticised for functionalising and quantifying touch, this is not an exhaustive understanding of the incorporation of affective touch in social robotics. Alongside functional and quantifying processes (and not necessarily in opposition to them) are novel and rich imaginative ones, often driven by low-tech materials. These dimensions of affective touch are more often articulated in discussions of robotic, cinematic, tactile and media art that consider the perceptual style of touch to be multivalent, imaginative and mobile. This perspective can contribute to articulating the dynamics of affective touch in social robotics, allowing for the recognition of the importance of the low-tech, material features that are a noteworthy part of touching robots. The ambiguities and indeterminacies of affective touch, messy materialism and the interactivity of affect interweave with high-tech computational practices in generating the experience of touching social robots.},
+  file = {/home/avnerus/Zotero/storage/JGJQNMP8/Kerruish - Affective Touch in Social Robots.pdf},
+  language = {en}
+}
+
 @misc{khaledMonitorMan,
   title = {Monitor {{Man}}},
   author = {Khaled, Yassine}
+}
+
+@inproceedings{kiddSociableRobotEncourage2006,
+  title = {A Sociable Robot to Encourage Social Interaction among the Elderly},
+  booktitle = {Proceedings 2006 {{IEEE International Conference}} on {{Robotics}} and {{Automation}}, 2006. {{ICRA}} 2006.},
+  author = {Kidd, C.D. and Taggart, W. and Turkle, S.},
+  year = {2006},
+  pages = {3972--3976},
+  publisher = {{IEEE}},
+  address = {{Orlando, FL, USA}},
+  doi = {10.1109/ROBOT.2006.1642311},
+  abstract = {In this paper, we present evidence that although current models for introduction of robotic companions stress individual encounters, a social community alternative is promising. This argument emerges from an experiment we conducted with a small interactive robot at two local nursing homes. Here we give a brief introduction to the robot and our experience at the homes. We compare the robot used to a semi-robotic toy whose use initially suggested to us the benefits of social community models in the presentation of robotics to the elderly. We find that even where individual encounters are significant, sensitivity to social dimensions improve the benefits of these encounters.},
+  file = {/home/avnerus/Zotero/storage/APXPW2N5/Kidd et al. - 2006 - A sociable robot to encourage social interaction a.pdf},
+  isbn = {978-0-7803-9505-3},
+  language = {en}
 }
 
 @article{kilteniSenseEmbodimentVirtual2012,
@@ -1841,6 +1966,30 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   number = {2}
 }
 
+@inproceedings{kortnerHowSocialRobots2012,
+  title = {How Social Robots Make Older Users Really Feel Well\textendash{}a Method to Assess Users' Concepts of a Social Robotic Assistant},
+  booktitle = {International {{Conference}} on {{Social Robotics}}},
+  author = {K{\"o}rtner, Tobias and Schmid, Alexandra and {Batko-Klein}, Daliah and Gisinger, Christoph and Huber, Andreas and Lammer, Lara and Vincze, Markus},
+  year = {2012},
+  pages = {138--147},
+  publisher = {{Springer}}
+}
+
+@inproceedings{kozimaSocialRobotsChildren2006,
+  title = {Social Robots for Children: Practice in Communication-Care},
+  shorttitle = {Social Robots for Children},
+  booktitle = {9th {{IEEE International Workshop}} on {{Advanced Motion Control}}, 2006.},
+  author = {Kozima, H. and Nakagawa, C.},
+  year = {2006},
+  pages = {768--773},
+  publisher = {{IEEE}},
+  address = {{Istanbul, Turkey}},
+  doi = {10.1109/AMC.2006.1631756},
+  abstract = {This paper describes our research project that explores possible use of interactive robots in communicationcare for children, especially those with special needs. For this purpose, we built Keepon, which is a small creature-like robot, and observed how autistic and typically-developing children (2\textendash{}4 years old) interacted with it. Keepon was placed in their playrooms just as one of their toys, and tele-controlled by a human operator in a remote room; the children naturally and spontaneously showed various communicative actions to Keepon. From the longitudinal observations for more than two years (over 100 sessions of 3 hours) in a remedial institute and a preschool, we found that Keepon's comprehensive appearance and predictable responses gave the children a playful and relaxed mood, in which they spontaneously engaged in dyadic interaction with Keepon, and also that the typically-developing children and some of the autistic children extended the interaction into triadic one, where Keepon worked as the pivot of interpersonal play with their caregivers. Each child showed a different style and a different unfolding of interaction over time, which tell us a ``story'' of his or her personality and developmental profile, which is informative for the caregiver and the nursing staff to understand the child better, and is now being utilized for improving the remedial and educational services.},
+  file = {/home/avnerus/Zotero/storage/6AZ3LR5M/Kozima and Nakagawa - 2006 - Social robots for children practice in communicat.pdf},
+  language = {en}
+}
+
 @article{kramerFacetofaceCommunicationInternet,
   title = {Face-to-Face {{Communication Over}} the {{Internet}}},
   author = {Kra\textasciidieresis{}mer, Nicole C and Kappas, Arvid},
@@ -1867,6 +2016,20 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   year = {2009},
   publisher = {{Routledge}},
   isbn = {1-134-36047-9}
+}
+
+@article{kristofferssonReviewMobileRobotic2013,
+  title = {A {{Review}} of {{Mobile Robotic Telepresence}}},
+  author = {Kristoffersson, Annica and Coradeschi, Silvia and Loutfi, Amy},
+  year = {2013},
+  volume = {2013},
+  pages = {1--17},
+  issn = {1687-5893, 1687-5907},
+  doi = {10.1155/2013/902316},
+  abstract = {Mobile robotic telepresence (MRP) systems incorporate video conferencing equipment onto mobile robot devices which can be steered from remote locations. These systems, which are primarily used in the context of promoting social interaction between people, are becoming increasingly popular within certain application domains such as health care environments, independent living for the elderly, and office environments. In this paper, an overview of the various systems, application areas, and challenges found in the literature concerning mobile robotic telepresence is provided. The survey also proposes a set terminology for the field as there is currently a lack of standard terms for the different concepts related to MRP systems. Further, this paper provides an outlook on the various research directions for developing and enhancing mobile robotic telepresence systems per se, as well as evaluating the interaction in laboratory and field settings. Finally, the survey outlines a number of design implications for the future of mobile robotic telepresence systems for social interaction.},
+  file = {/home/avnerus/Zotero/storage/7NX4BYIJ/Kristoffersson et al. - 2013 - A Review of Mobile Robotic Telepresence.pdf},
+  journal = {Advances in Human-Computer Interaction},
+  language = {en}
 }
 
 @article{kronebergContributionIntergroupContact2011,
@@ -1953,6 +2116,15 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   isbn = {0020-7373},
   journal = {International journal of man-machine studies},
   number = {2}
+}
+
+@inproceedings{leeDesigningAppearanceTelepresence2015,
+  title = {Designing the Appearance of a Telepresence Robot, {{M4K}}: A Case Study},
+  booktitle = {International {{Workshop}} on {{Cultural Robotics}}},
+  author = {Lee, Hyelip and Kim, Yeon-Ho and Lee, Kwang-ku and Yoon, Dae-Keun and You, Bum-Jae},
+  year = {2015},
+  pages = {33--43},
+  publisher = {{Springer}}
 }
 
 @misc{leedshackerspaceMakingMachinableWax,
@@ -2201,6 +2373,20 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   keywords = {Body Awareness,Perception,Phenomenology,Self-Perception,Somesthetic Perception}
 }
 
+@inproceedings{martiSociallyAssistiveRobotics2006,
+  title = {Socially {{Assistive Robotics}} in the {{Treatment}} of {{Behavioural}} and {{Psychological Symptoms}} of {{Dementia}}},
+  booktitle = {The {{First IEEE}}/{{RAS}}-{{EMBS International Conference}} on {{Biomedical Robotics}} and {{Biomechatronics}}, 2006. {{BioRob}} 2006.},
+  author = {Marti, P. and Bacigalupo, M. and Giusti, L. and Mennecozzi, C. and Shibata, T.},
+  year = {2006},
+  pages = {483--488},
+  publisher = {{IEEE}},
+  address = {{Pisa, Italy}},
+  doi = {10.1109/BIOROB.2006.1639135},
+  file = {/home/avnerus/Zotero/storage/CLKFM2I7/Marti et al. - 2006 - Socially Assistive Robotics in the Treatment of Be.pdf},
+  isbn = {978-1-4244-0040-9},
+  language = {en}
+}
+
 @book{marxCapitalCritiquePolitical2015,
   title = {Capital: {{A Critique}} of {{Political Economy}}},
   shorttitle = {Capital {{Vol I}}},
@@ -2411,6 +2597,7 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   issn = {1070-9932},
   doi = {10.1109/MRA.2012.2192811},
   abstract = {More than 40 years ago, Masahiro Mori, a robotics professor at the Tokyo Institute of Technology, wrote an essay [1] on how he envisioned people's reactions to robots that looked and acted almost like a human. In particular, he hypothesized that a person's response to a humanlike robot would abruptly shift from empathy to revulsion as it approached, but failed to attain, a lifelike appearance. This descent into eeriness is known as the uncanny valley. The essay appeared in an obscure Japanese journal called Energy in 1970, and in subsequent years, it received almost no attention. However, more recently, the concept of the uncanny valley has rapidly attracted interest in robotics and other scientific circles as well as in popular culture. Some researchers have explored its implications for human-robot interaction and computer-graphics animation, whereas others have investigated its biological and social roots. Now interest in the uncanny valley should only intensify, as technology evolves and researchers build robots that look human. Although copies of Mori's essay have circulated among researchers, a complete version hasn't been widely available. The following is the first publication of an English translation that has been authorized and reviewed by Mori. (See ``Turning Point'' in this issue for an interview with Mori.).},
+  file = {/home/avnerus/Zotero/storage/595EALS8/Mori et al. - 2012 - The Uncanny Valley [From the Field].pdf},
   journal = {IEEE Robotics Automation Magazine},
   keywords = {computer animation,computer graphics animation,Energy journal,human factors,human-robot interaction,humanlike robot,humanoid robots,Japanese journal,person response,robotics professor,Tokyo Institute of Technology,uncanny valley},
   number = {2}
@@ -2522,6 +2709,22 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   number = {12}
 }
 
+@inproceedings{nieCanYouHold2012,
+  title = {Can You Hold My Hand?: Physical Warmth in Human-Robot Interaction},
+  shorttitle = {Can You Hold My Hand?},
+  booktitle = {Proceedings of the Seventh Annual {{ACM}}/{{IEEE}} International Conference on {{Human}}-{{Robot Interaction}} - {{HRI}} '12},
+  author = {Nie, Jiaqi and Pak, Michelle and Marin, Angie Lorena and Sundar, S. Shyam},
+  year = {2012},
+  pages = {201},
+  publisher = {{ACM Press}},
+  address = {{Boston, Massachusetts, USA}},
+  doi = {10.1145/2157689.2157755},
+  abstract = {This study investigates whether the temperature of a robot's hand can affect perceptions of the robot as a companion. Our research empirically analyzes the responses of 39 individuals randomly assigned to one of three conditions: (1) holding a warm robot hand or (2) holding a cold robot hand or (3) not holding a robot hand. The effects of this simulated `human touch' on HRI were examined in the context of viewing a horror film clip. Results suggest that experiences of physical warmth and handholding increase feelings of friendship and trust toward the robot. However, the discrepancy between the expectation of an actual human touch and the mechanical appearance of a robot could result in negative effects.},
+  file = {/home/avnerus/Zotero/storage/EWMJHY3N/Nie et al. - 2012 - Can you hold my hand physical warmth in human-ro.pdf},
+  isbn = {978-1-4503-1063-5},
+  language = {en}
+}
+
 @misc{ninjatekNinjaTekNinjaFlex2019,
   title = {{{NinjaTek}} | {{NinjaFlex}}},
   author = {NinjaTek},
@@ -2546,6 +2749,28 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   pages = {e0144296},
   journal = {PloS one},
   number = {12}
+}
+
+@article{nowakEffectAgencyAnthropomorphism2003,
+  title = {The {{Effect}} of the {{Agency}} and {{Anthropomorphism}} on {{Users}}' {{Sense}} of {{Telepresence}}, {{Copresence}}, and {{Social Presence}} in {{Virtual Environments}}},
+  author = {Nowak, Kristine L. and Biocca, Frank},
+  year = {2003},
+  month = oct,
+  volume = {12},
+  pages = {481--494},
+  issn = {1054-7460, 1531-3263},
+  doi = {10.1162/105474603322761289},
+  abstract = {We report on an experiment that examined the influence of anthropomorphism and perceived agency on presence, copresence, and social presence in a virtual environment. The experiment varied the level of anthropomorphism of the image of interactants: high anthropomorphism, low anthropomorphism, or no image. Perceived agency was manipulated by telling the participants that the image was either an avatar controlled by a human, or an agent controlled by a computer. The results support the prediction that people respond socially to both human and computercontrolled entities, and that the existence of a virtual image increases telepresence. Participants interacting with the less-anthropomorphic image reported more copresence and social presence than those interacting with partners represented by either no image at all or by a highly anthropomorphic image of the other, indicating that the more anthropomorphic images set up higher expectations that lead to reduced presence when these expectations were not met.},
+  file = {/home/avnerus/Zotero/storage/LDIUMAGW/Nowak and Biocca - 2003 - The Effect of the Agency and Anthropomorphism on U.pdf},
+  journal = {Presence: Teleoperators and Virtual Environments},
+  language = {en},
+  number = {5}
+}
+
+@misc{NumpySinNumPy,
+  title = {Numpy.Sin \textemdash{} {{NumPy}} v1.9 {{Manual}}},
+  file = {/home/avnerus/Zotero/storage/3TBXQEZ5/numpy.sin.html},
+  howpublished = {https://het.as.utexas.edu/HET/Software/Numpy/reference/generated/numpy.sin.html}
 }
 
 @article{oconnellUnlawfulKillingCombat2009,
@@ -2658,6 +2883,19 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   year = {1961},
   publisher = {{MIT press}},
   file = {/home/avnerus/Zotero/storage/KFMBUFBE/Paynter - 1961 - Analysis and design of engineering systems.pdf}
+}
+
+@article{pearsonRealityVirtualBergson2005,
+  title = {The {{Reality}} of the {{Virtual}}: {{Bergson}} and {{Deleuze}}},
+  shorttitle = {The {{Reality}} of the {{Virtual}}},
+  author = {Pearson, Keith Ansell},
+  year = {2005},
+  volume = {120},
+  pages = {1112--1127},
+  publisher = {{Johns Hopkins University Press}},
+  issn = {0026-7910},
+  journal = {MLN},
+  number = {5}
 }
 
 @phdthesis{peledSoftRoboticIncarnation2019,
@@ -2775,6 +3013,20 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   journal = {Journal of Personality and Social Psychology},
   language = {en},
   number = {5}
+}
+
+@book{posnerRoutledgeCompanionPuppetry2014,
+  title = {The {{Routledge}} Companion to Puppetry and Material Performance},
+  editor = {Posner, Dassia N. and Orenstein, Claudia and Bell, John},
+  year = {2014},
+  publisher = {{Routledge}},
+  address = {{London ; New York, NY}},
+  abstract = {"As an art form, puppetry has enjoyed a significant expansion over the past twenty years. This can be seen both in terms of its popularity in mainstream theatre and in the amount of attention that it now receives from an academic audience. This increased presence in the practical and theoretical realms is also underlined by a diversification in the definition of puppetry itself, with the term now being used to cover everything from found or traditional 'performing objects' to super high-tech projections and constructions"--},
+  file = {/home/avnerus/Zotero/storage/Z25AG37Q/Posner et al. - 2014 - The Routledge companion to puppetry and material p.pdf},
+  isbn = {978-0-415-70540-0},
+  keywords = {PERFORMING ARTS / General,PERFORMING ARTS / Puppets \& Puppetry,Puppet theater},
+  language = {en},
+  lccn = {PN1972 .R68 2014}
 }
 
 @article{postmesBehaviorOnlineDoes2002,
@@ -3445,6 +3697,21 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   number = {4}
 }
 
+@inproceedings{stiehlDesignTherapeuticRobotic2005,
+  title = {Design of a Therapeutic Robotic Companion for Relational, Affective Touch},
+  booktitle = {{{ROMAN}} 2005. {{IEEE International Workshop}} on {{Robot}} and {{Human Interactive Communication}}, 2005.},
+  author = {Stiehl, W.D. and Lieberman, J. and Breazeal, C. and Basel, L. and Lalla, L. and Wolf, M.},
+  year = {2005},
+  pages = {408--415},
+  publisher = {{IEEE}},
+  address = {{Nashville, TN, USA}},
+  doi = {10.1109/ROMAN.2005.1513813},
+  abstract = {Much research has shown the positive health benefits of companion animals. Unfortunately these animals are not always available to patients due to allergies, risk of disease, or other reasons. Recently, this application domain has attracted attention of robotics researchers. The Huggable is a new type of robotic companion capable of active relational and affective touch-based interactions with a person. It features a high number of somatic sensors (electric field, temperature, and force) over the entire surface of the robot, underneath a soft silicone skin and fur fabric covering. This paper describes the design and early results in recognizing affective content of touch for this robot.},
+  file = {/home/avnerus/Zotero/storage/KQNLHNJ8/Stiehl et al. - 2005 - Design of a therapeutic robotic companion for rela.pdf},
+  isbn = {978-0-7803-9274-8},
+  language = {en}
+}
+
 @article{stoneWillRealBody1991,
   title = {Will the Real Body Please Stand Up},
   author = {Stone, Allucquere Rosanne},
@@ -3508,6 +3775,7 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   title = {Social {{Robots}} and {{Emotion}}: {{Transcending}} the {{Boundary Between Humans}} and {{ICTs}}},
   author = {Sugiyama, Satomi and Vincent, Jane},
   pages = {6},
+  file = {/home/avnerus/Zotero/storage/SZZHTAW2/Sugiyama and Vincent - Social Robots and Emotion Transcending the Bounda.pdf},
   language = {en}
 }
 
@@ -3668,6 +3936,14 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   journal = {Group Processes \& Intergroup Relations},
   language = {en},
   number = {4}
+}
+
+@book{turnerRediscoveringSocialGroup1987,
+  title = {Rediscovering the Social Group: {{A}} Self-Categorization Theory.},
+  author = {Turner, John C. and Hogg, Michael A. and Oakes, Penelope J. and Reicher, Stephen D. and Wetherell, Margaret S.},
+  year = {1987},
+  publisher = {{Basil Blackwell}},
+  isbn = {0-631-14806-X}
 }
 
 @misc{UnicodeEmoji2019,
@@ -3929,6 +4205,21 @@ Mindfulness has been used as a part of the modality of health care. It is clear 
   type = {Under Review}
 }
 
+@article{willemseAffectiveBehavioralResponses2017,
+  title = {Affective and {{Behavioral Responses}} to {{Robot}}-{{Initiated Social Touch}}: {{Toward Understanding}} the {{Opportunities}} and {{Limitations}} of {{Physical Contact}} in {{Human}}\textendash{{Robot Interaction}}},
+  shorttitle = {Affective and {{Behavioral Responses}} to {{Robot}}-{{Initiated Social Touch}}},
+  author = {Willemse, Christian J. A. M. and Toet, Alexander and {van Erp}, Jan B. F.},
+  year = {2017},
+  month = may,
+  volume = {4},
+  pages = {12},
+  issn = {2297-198X},
+  doi = {10.3389/fict.2017.00012},
+  file = {/home/avnerus/Zotero/storage/T9PI3MQJ/Willemse et al. - 2017 - Affective and Behavioral Responses to Robot-Initia.pdf},
+  journal = {Frontiers in ICT},
+  language = {en}
+}
+
 @misc{WordYear2015,
   title = {Word of the {{Year}} 2015 | {{Oxford Dictionaries}}},
   abstract = {Find out more about the 'word' of the year for 2015},
@@ -4009,7 +4300,8 @@ Mindfulness has been used as a part of the modality of health care. It is clear 
 
 @article{zhengSoftGrippersNot,
   title = {Soft Grippers Not Only Grasp Fruits: {{From}} Affective to Psychotropic {{HRI}}},
-  author = {Zheng, Caroline Yan}
+  author = {Zheng, Caroline Yan},
+  file = {/home/avnerus/Zotero/storage/8ZZ6KHPB/Zheng - Soft grippers not only grasp fruits From affectiv.pdf}
 }
 
 @article{zimbardoHumanChoiceIndividuation1969,
@@ -4026,10 +4318,6 @@ Mindfulness has been used as a part of the modality of health care. It is clear 
   file = {/home/avnerus/Zotero/storage/FD87IHRC/1971-08069-001.html},
   journal = {Nebraska Symposium on Motivation},
   keywords = {Aggressive Behavior,Attitudes,Social Change,Social Processes,Stimulus Control}
-}
-
-@book{zotero-837,
-  type = {Book}
 }
 
 
