Working on Wihuri

--- a/aalto.bib
+++ b/aalto.bib
@@ -1733,6 +1733,22 @@ Conclusion: Factors related to the robot itself, specifically, its performance, 
   number = {1}
 }
 
+@article{johnsonAngerFlamingComputermediated2009,
+  title = {Anger and Flaming in Computer-Mediated Negotiation among Strangers},
+  author = {Johnson, Norman A. and Cooper, Randolph B. and Chin, Wynne W.},
+  year = {2009},
+  month = feb,
+  volume = {46},
+  pages = {660--672},
+  issn = {01679236},
+  doi = {10.1016/j.dss.2008.10.008},
+  abstract = {The present study explores the antecedents of the antinormative hostile communication of emotion, termed flaming, in the context of computer-mediated negotiation. We find that flaming is associated with anger directed toward the negotiating context; this can occur when a negotiator becomes frustrated due to problems with communication channel characteristics or due to uncertainty surrounding the negotiation task. We also find that flaming is associated with anger directed toward a negotiator's partner, which can occur when a negotiator perceives that the partner is being unfair. We find further that anger totally mediates the relationships between flaming and its antecedents. These findings provide the basis to argue that anger reduction can effectively decrease flaming, independent of the existence of flaming antecedents, such as unfairness. We therefore provide suggestions that can help with the reduction of anger in such circumstances.},
+  file = {/home/avnerus/Zotero/storage/R5MMU6T2/Johnson et al. - 2009 - Anger and flaming in computer-mediated negotiation.pdf},
+  journal = {Decision Support Systems},
+  language = {en},
+  number = {3}
+}
+
 @article{joinsonSelfdisclosureComputermediatedCommunication2001,
   title = {Self-Disclosure in Computer-Mediated Communication: {{The}} Role of Self-Awareness and Visual Anonymity},
   shorttitle = {Self-Disclosure in Computer-Mediated Communication},
@@ -4328,6 +4344,16 @@ Mindfulness has been used as a part of the modality of health care. It is clear 
   file = {/home/avnerus/Zotero/storage/TQ4WPEDZ/Walther et al. - 2015 - Computer-mediated communication and the reduction .pdf},
   journal = {Computers in Human Behavior},
   language = {en}
+}
+
+@article{waltherCuesFilteredOut2002,
+  title = {Cues Filtered out, Cues Filtered In},
+  author = {Walther, Joseph B. and Parks, Malcolm R.},
+  year = {2002},
+  volume = {3},
+  pages = {529--563},
+  file = {/home/avnerus/Zotero/storage/UIQXSXZB/0a85e538f3d5705044000000.pdf},
+  journal = {Handbook of interpersonal communication}
 }
 
 @article{wangDesignFabricationFiberreinforced2016,
